Kubernetes/kubernetes/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-svc
  namespace: juice-shop
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
    - port: 8080
      targetPort: 3000
